--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,59 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
+  // see -> https://www.npmjs.com/package/typescript-plugin-css-modules
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
   // see -> https://github.com/microsoft/TypeScript/issues/43838
   // "typescript.tsserver.log": "verbose",
+  // -------------- EDITOR -----------------------
+  "editor.formatOnSave": true,
+  // "editor.formatOnPaste": true,
+  // "editor.formatOnType": true,
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+  "[javascript][javascriptreact][typescript][typescriptreact]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[css][css][scss][sass][less]": {
+    "editor.defaultFormatter": "stylelint.vscode-stylelint"
+  },
+  "[json][jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "editor.codeActionsOnSave": {
+    // https://github.com/microsoft/vscode-eslint/blob/master/README.md#release-notes
+    "source.fixAll": true,
+    "source.fixAll.eslint": true,
+    "source.fixAll.stylelint": true
+  },
+  // -------------- EDITOR -----------------------
+  // -------------- LINTER -----------------------
+  "eslint.format.enable": true,
+  "eslint.enable": true,
+  "eslint.alwaysShowStatus": true,
+  "eslint.options": {
+    "extensions": [
+      ".html",
+      ".js",
+      ".ts",
+      ".jsx",
+      ".tsx"
+    ],
+  },
+  "eslint.validate": [
+    "javascript",
+    "typescript",
+    "html",
+    "javascriptreact",
+    "typescriptreact"
+  ],
+  // -------------- LINTER -----------------------
+  "files.autoSave": "afterDelay",
   "files.exclude": {
     "node_modules/": true
-  }
+  },
+  "cSpell.words": [
+    "hygen"
+  ]
 }
