--- a/package.json
+++ b/package.json
@@ -17,8 +17,22 @@
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.0.1",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.3"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.8",
+    "hygen": "^6.2.11",
+    "prettier": "^2.7.1",
+    "sass": "^1.55.0",
+    "typescript": "*",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
