--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 2357",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "next:dev": "next dev -p 2357",
+    "next:prebuild": "next telemetry disable",
+    "next:build": "next build",
+    "next:start": "next start",
+    "next:lint": "next lint",
+    "next:export": "next export",
+    "codegen:component": "hygen new component",
+    "codegen:page": "hygen new page"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -14,12 +18,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/eslint-parser": "^7.19.1",
+    "@types/eslint": "^8.4.6",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.38.1",
-    "eslint": "^8.0.1",
+    "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
