--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "esnext"
     ],
     "allowJs": true,
+    "checkJs": true,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -37,7 +38,9 @@
     "**/*.jsx",
     "next-env.d.ts",
     "next.config.js",
-    ".eslintrc.js"
+    ".eslintrc.js",
+    ".hygen.js",
+    ".hygen/**/*.js"
   ],
   "exclude": [
     "node_modules"
