--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
       "esnext"
     ],
     "allowJs": true,
-    "checkJs": true,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -34,15 +33,11 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "**/*.js",
-    "**/*.jsx",
     "next-env.d.ts",
-    "next.config.js",
-    ".eslintrc.js",
-    ".hygen.js",
-    ".hygen/**/*.js"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.js",
+    "**/*.jsx",
   ],
 }
