--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "next:dev": "next dev -p 2357",
+    "next:serve": "next dev -p 2357",
+    "next:dev": "concurrently \"yarn next:serve\" \"open http://localhost:2357\"",
     "next:prebuild": "next telemetry disable",
     "next:build": "next build",
     "next:start": "next start",
@@ -26,6 +27,7 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.38.1",
+    "concurrently": "^7.4.0",
     "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
@@ -37,6 +39,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
     "hygen": "^6.2.11",
+    "open": "^8.4.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "typescript": "*",
