--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.38.1",
+    "commitizen": "^4.2.5",
     "concurrently": "^7.4.0",
+    "cz-conventional-changelog": "3.3.0",
+    "cz-conventional-changelog-emoji": "^0.1.0",
     "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
