--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next:export": "next export",
     "commit": "git cz",
     "codegen:component": "hygen new component",
-    "codegen:page": "hygen new page"
+    "codegen:page": "hygen new page",
+    "husky:prepare": "husky install",
+    "lint:check": "eslint . --ext .js,.ts,.jsx,.tsx"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/eslint-parser": "^7.19.1",
+    "@commitlint/config-conventional": "^17.1.0",
     "@types/eslint": "^8.4.6",
     "@types/node": "18.7.21",
     "@types/react": "18.0.21",
@@ -29,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.38.1",
     "commitizen": "^4.2.5",
+    "commitlint": "^17.1.2",
     "concurrently": "^7.4.0",
     "cz-conventional-changelog": "3.3.0",
     "cz-conventional-changelog-emoji": "^0.1.0",
@@ -42,7 +46,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
+    "husky": "^8.0.0",
     "hygen": "^6.2.11",
+    "lint-staged": "^13.0.3",
     "nextjs-routes": "^0.1.3",
     "open": "^8.4.0",
     "prettier": "^2.7.1",
