--- a/package.json
+++ b/package.json
@@ -53,6 +53,14 @@
     "open": "^8.4.0",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
+    "stylelint": "^14.13.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-scss": "^7.0.0",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.3.0",
+    "stylelint-webpack-plugin": "^3.3.0",
     "typescript": "*",
     "typescript-plugin-css-modules": "^3.4.0"
   }
