--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,10 +49,10 @@
     "javascriptreact",
     "typescriptreact"
   ],
-  "stylelint.enable": true,
-  "css.validate": true,
-  "less.validate": true,
-  "scss.validate": true,
+  "scss.validate": false,
+  "css.validate": false,
+  "less.validate": false,
+  "stylelint.validate": ["css", "scss"],
   // -------------- LINTER -----------------------
   "files.autoSave": "afterDelay",
   "files.exclude": {
