--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,13 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@src/*": [
+        "./src/*"
+      ],
+      "@public/*": [
+        "./src/*"
+      ],
     },
     "target": "es5",
     "lib": [
